# Trading-MCP-Server

./: README.md  pyproject.toml  trader_tools.py
data/: trade_history.csv
